--- a/src/Views/SurveyView.css
+++ b/src/Views/SurveyView.css
@@ -12,8 +12,8 @@
   margin-bottom: 20px;
   color: #2c3e50;
   text-align: center;
-  background-color: #e8f4fd;
-  border: 1px solid #d1e9f9;
+  background-color: #E7F63C;
+  border: 1px solid #1FB436;
   padding: 8px 16px;
   border-radius: 50px;
 }
@@ -107,9 +107,9 @@
   width: 100%;
   max-width: 500px;
   padding: 18px;
-  border: none;
   border-radius: 8px;
-  background-color: #1FB436;
+  background-color: #E7F63C;
+  border: 1px solid #1FB436;
   color: #333;
   font-size: 1.1rem;
   font-weight: bold;
